tests/golden/gateway-policies/minimal.yaml
---
# Source: gateway-policies/templates/tls-baseline.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: ClientTrafficPolicy
metadata:
  name: tls-baseline
  namespace: default
spec:
  targetSelectors:
    - group: gateway.networking.k8s.io
      kind: Gateway
      matchExpressions:
        - key: tls-baseline-exempt
          operator: DoesNotExist
  tls:
    ciphers:
    - ECDHE-ECDSA-AES128-GCM-SHA256
    - ECDHE-RSA-AES128-GCM-SHA256
    - ECDHE-ECDSA-AES256-GCM-SHA384
    - ECDHE-RSA-AES256-GCM-SHA384
    - ECDHE-ECDSA-CHACHA20-POLY1305
    - ECDHE-RSA-CHACHA20-POLY1305
    minVersion: "1.2"
